# magento2-worker-daemon

./: Cargo.toml  LICENSE  README.md
src/: config.rs  input.rs  main.rs  util.rs  worker.rs
