[package]
name = "magento2-worker-daemon"
version = "0.3.0"
edition = "2021"

[profile.release]
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
log = "0.4.17"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
signal-hook = "0.3.15"
simple_logger = { version = "4.1.0", features = ["stderr"] }
